--- a/apps/read-model/package.json
+++ b/apps/read-model/package.json
@@ -22,7 +22,10 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.0.0",
+    "mongoose": "^7.1.0",
+    "reducer": "workspace:*",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
@@ -46,9 +49,9 @@
     "ts-jest": "29.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
+    "tsconfig": "workspace:*",
     "tsconfig-paths": "4.1.1",
-    "typescript": "^4.7.4",
-    "tsconfig": "workspace:*"
+    "typescript": "^4.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
