--- a/apps/write-model/.env.example
+++ b/apps/write-model/.env.example
@@ -2,3 +2,8 @@ TZ=UTC
 NODE_ENV=development
 MONGODB_URL=
 MONGODB_DB=pleasurepal
+#MQTT
+MQTT_HOST=localhost
+MQTT_PORT=5672
+MQTT_USERNAME=
+MQTT_PASSWORD=
