--- a/apps/write-model/package.json
+++ b/apps/write-model/package.json
@@ -28,6 +28,9 @@
     "@nestjs/microservices": "^9.4.0",
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.4.0",
+    "@nestjs/platform-socket.io": "^9.4.0",
+    "@nestjs/websockets": "^9.4.0",
+    "@types/amqplib": "^0.10.1",
     "amqp-connection-manager": "^4.1.13",
     "amqplib": "^0.10.3",
     "dotenv": "^16.0.3",
