--- a/apps/read-model/package.json
+++ b/apps/read-model/package.json
@@ -27,20 +27,21 @@
     "@nestjs/graphql": "^11.0.5",
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.4.0",
+    "@types/amqplib": "^0.10.1",
     "amqplib": "^0.10.3",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "graphql-subscriptions": "^2.0.0",
     "mongoose": "^7.1.0",
-    "reducer": "workspace:*",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "types": "workspace:*",
+    "read-reducer": "workspace:*"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@types/amqplib": "^0.10.1",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
