--- a/apps/write-model/package.json
+++ b/apps/write-model/package.json
@@ -36,7 +36,7 @@
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "mongoose": "^7.1.0",
-    "reducer": "workspace:*",
+    "types": "workspace:*",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
