--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -2,6 +2,13 @@
   "name": "types",
   "version": "0.0.0",
   "private": true,
-  "main": "src/index.ts",
-  "dependencies": {}
+  "main": "./dist/index",
+  "types": "./dist/index",
+  "type": "commonjs",
+  "scripts": {
+    "build": "tsc --build --force tsconfig.json"
+  },
+  "dependencies": {
+    "@types/node": "18.11.18"
+  }
 }
