graphql error handling

--- a/apps/write-model/.env.example
+++ b/apps/write-model/.env.example
@@ -2,6 +2,7 @@ TZ=UTC
 NODE_ENV=development
 MONGODB_URL=
 MONGODB_DB=pleasurepal
+MONGODB_DB=pleasurepal-eventstore
 #MQTT
 MQTT_HOST=localhost
 MQTT_PORT=5672
