--- a/apps/read-model/package.json
+++ b/apps/read-model/package.json
@@ -36,7 +36,8 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "types": "workspace:*",
-    "read-reducer": "workspace:*"
+    "read-reducer": "workspace:*",
+    "rimraf-cqrs-lib": "workspace:*"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
