--- a/apps/write-model/package.json
+++ b/apps/write-model/package.json
@@ -38,7 +38,8 @@
     "mongoose": "^7.1.0",
     "types": "workspace:*",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "rimraf-cqrs-lib": "workspace:*"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
