--- a/apps/read-model/package.json
+++ b/apps/read-model/package.json
@@ -27,17 +27,21 @@
     "@nestjs/graphql": "^11.0.5",
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.4.0",
+    "@nestjs/platform-socket.io": "^9.4.0",
+    "@nestjs/websockets": "^9.4.0",
     "@types/amqplib": "^0.10.1",
     "amqplib": "^0.10.3",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "graphql-subscriptions": "^2.0.0",
+    "mongodb": "^5.7.0",
     "mongoose": "^7.1.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0",
-    "types": "workspace:*",
     "read-reducer": "workspace:*",
-    "rimraf-cqrs-lib": "workspace:*"
+    "reflect-metadata": "^0.1.13",
+    "rimraf-cqrs-lib": "workspace:*",
+    "rxjs": "^7.2.0",
+    "socket.io": "^4.6.2",
+    "types": "workspace:*"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
