--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "turbo": "latest"
+    "eslint": "^8.51.0",
+    "turbo": "^1.10.15"
   },
   "packageManager": "pnpm@7.15.0",
   "name": "rimraf-cqrs"
