--- a/apps/rabbit/package.json
+++ b/apps/rabbit/package.json
@@ -13,13 +13,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "18.7.18",
-    "@types/amqplib": "^0.10.1",
+    "@types/amqplib": "^0.10.2",
+    "@types/node": "20.8.5",
+    "amqplib": "^0.10.3",
+    "dotenv": "^16.3.1",
     "ts-node": "^10.9.1",
     "tsconfig": "workspace:*",
-    "typescript": "^4.8.4",
-    "amqplib": "^0.10.3",
-    "dotenv": "^16.0.3"
+    "typescript": "^5.2.2"
   }
-  
 }
