--- a/apps/write-model-v2/tsconfig.json
+++ b/apps/write-model-v2/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "tsconfig/nestjs.json",
   "compilerOptions": {
-    "outDir": "./dist"
-  }
+    "outDir": "./dist",
+    "resolveJsonModule":false,
+    "rootDirs": ["src","node_modules/rimraf-cqrs-lib/src"]
+  },
+  
 }
