--- a/apps/write-model-v2/package.json
+++ b/apps/write-model-v2/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rm -r dist && tsc",
+    "build": "rm -r -f dist && tsc",
     "start": "nest start",
     "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
