--- a/apps/write-model-v2/tsconfig.json
+++ b/apps/write-model-v2/tsconfig.json
@@ -1,9 +1,20 @@
 {
-  "extends": "tsconfig/nestjs.json",
+  //"extends": "tsconfig/nestjs.json",
   "compilerOptions": {
-    "outDir": "./dist",
-    "resolveJsonModule":false,
-    "rootDirs": ["src","node_modules/rimraf-cqrs-lib/src"]
+    "experimentalDecorators": true,
+
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
+    "moduleResolution": "node",
+    "preserveWatchOutput": true,
+    "skipLibCheck": true,
+    "noEmit": true,
+    //"strict": true,
+    //"outDir": "./dist",
+    
   },
-  
+  // "include": [
+  //   "src/**/*"
+  // ]
 }
