--- a/apps/write-model-v2/package.json
+++ b/apps/write-model-v2/package.json
@@ -18,11 +18,10 @@
     "@apollo/server": "^4.9.4",
     "@nestjs/common": "^10.2.7",
     "@nestjs/core": "^10.2.7",
-    "@nestjs/mongoose": "^10.0.1",
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
-    "mongoose": "^7.6.2",
+    "mongodb": "^6.1.0",
     "rimraf-cqrs-lib": "workspace:*",
     "types": "workspace:*"
   },
@@ -31,9 +30,10 @@
     "@graphql-codegen/typescript": "4.0.1",
     "@graphql-codegen/typescript-resolvers": "4.0.1",
     "@nestjs/cli": "^10.1.18",
+    "@types/debug": "^4.1.10",
+    "@types/node": "20.8.5",
     "tsconfig": "workspace:*",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^5.2.2",
-    "@types/debug": "^4.1.10"
+    "typescript": "^5.2.2"
   }
 }
