--- a/apps/write-model-v2/tsconfig.json
+++ b/apps/write-model-v2/tsconfig.json
@@ -1,20 +1,6 @@
 {
-  //"extends": "tsconfig/nestjs.json",
+  "extends": "tsconfig/nestjs.json",
   "compilerOptions": {
-    "experimentalDecorators": true,
-
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true,
-    "moduleResolution": "node",
-    "preserveWatchOutput": true,
-    "skipLibCheck": true,
-    "noEmit": true,
-    //"strict": true,
-    //"outDir": "./dist",
-    
-  },
-  // "include": [
-  //   "src/**/*"
-  // ]
+    "outDir": "./dist"
+  }
 }
