--- a/packages/rimraf-cqrs-lib/package.json
+++ b/packages/rimraf-cqrs-lib/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "license": "MIT",
   "private": true,
-  "main": "./src/index.ts",
+  "main": "./dist/index.js",
   "types": "./src/index.ts",
-  "scripts": {},
+  "type": "commonjs",
+  "scripts": {
+    "build": "tsc"
+  },
   "dependencies": {
+    "@nestjs/common": "^10.2.7",
+    "@nestjs/core": "^10.2.7",
     "debug": "^4.3.4",
-    "mongoose": "^7.6.2"
+    "mongodb": "^6.1.0"
   },
   "devDependencies": {
     "@types/debug": "^4.1.10",
