--- a/packages/rimraf-rabbitmq/package.json
+++ b/packages/rimraf-rabbitmq/package.json
@@ -1,27 +1,24 @@
 {
-  "name": "rimraf-cqrs-lib",
-  "version": "0.0.1",
+  "name": "rimraf-rabbitmq",
+  "version": "1.0.0",
   "description": "",
-  "license": "MIT",
-  "private": true,
   "main": "./dist/index.js",
   "types": "./src/index.ts",
-  "type": "commonjs",
   "scripts": {
     "build": "tsc"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@apollo/server": "^4.9.4",
-    "@nestjs/common": "^10.2.7",
-    "@nestjs/core": "^10.2.7",
+    "amqplib": "^0.10.3",
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
-    "mongodb": "^6.1.0",
-    "rimraf-rabbitmq": "workspace:*"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.2",
     "@types/debug": "^4.1.10",
-    "@types/node": "20.8.5",
     "tsconfig": "workspace:*",
     "typescript": "^5.2.2"
   }
