--- a/apps/read-model-v2/package.json
+++ b/apps/read-model-v2/package.json
@@ -1,38 +1,33 @@
 {
-  "name": "write-model-v2",
+  "name": "read-model-v2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "rm -r -f dist && tsc",
     "start": "node dist/main.js",
-    "dev": "ts-node-dev src/main.ts",
-    "codegen": "graphql-codegen --config codegen.ts"
+    "dev": "tsc-watch --onSuccess \"node dist/main.js\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/server": "^4.9.4",
     "async-exit-hook": "^2.0.1",
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
-    "graphql": "^16.8.1",
+    "express": "^4.18.2",
     "mongodb": "^6.1.0",
     "rimraf-cqrs-lib": "workspace:*",
+    "socket.io": "^4.7.2",
     "types": "workspace:*"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "5.0.0",
-    "@graphql-codegen/typescript": "4.0.1",
-    "@graphql-codegen/typescript-resolvers": "4.0.1",
-    "@nestjs/cli": "^10.1.18",
     "@types/async-exit-hook": "^2.0.1",
     "@types/debug": "^4.1.10",
+    "@types/express": "^4.17.19",
     "@types/node": "20.8.5",
     "ts-node-dev": "^2.0.0",
     "tsconfig": "workspace:*",
-    "tsconfig-paths": "4.2.0",
     "typescript": "^5.2.2"
   }
 }
