--- a/apps/read-model-v2/tsconfig.json
+++ b/apps/read-model-v2/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": "tsconfig/nestjs.json",
   "compilerOptions": {
-    "outDir": "./dist"
+    "outDir": "./dist",
   },
   "include": ["./src/**/*"]
-
 }
