--- a/apps/read-model-v2/package.json
+++ b/apps/read-model-v2/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rm -r -f dist && tsc",
     "start": "node dist/main.js",
-    "dev": "tsc-watch --onSuccess \"node dist/main.js\""
+    "dev": "ts-node-dev src/main.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "mongodb": "^6.1.0",
     "rimraf-cqrs-lib": "workspace:*",
+    "rimraf-rabbitmq": "workspace:*",
     "socket.io": "^4.7.2",
     "types": "workspace:*"
   },
