--- a/apps/write-model-v2/package.json
+++ b/apps/write-model-v2/package.json
@@ -20,7 +20,8 @@
     "graphql": "^16.8.1",
     "mongodb": "^6.1.0",
     "rimraf-cqrs-lib": "workspace:*",
-    "types": "workspace:*"
+    "types": "workspace:*",
+    "rimraf-rabbitmq": "workspace:*"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.0",
