--- a/packages/read-reducer/tsconfig.json
+++ b/packages/read-reducer/tsconfig.json
@@ -1,8 +1,6 @@
 {
-  "exclude": ["dist", "build", "node_modules"],
+  "extends": "tsconfig/nestjs.json",
   "compilerOptions": {
-    "module": "commonjs",
     "outDir": "./dist"
-  },
-  "include": ["src/**/*"]
+  }
 }
