--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -10,5 +10,11 @@
   },
   "dependencies": {
     "@types/node": "20.8.5"
+  },
+  "devDependencies": {
+    "tsconfig": "workspace:*",
+    "typescript": "^5.2.2"
   }
+  
+
 }
