--- a/packages/rimraf-cqrs-lib/package.json
+++ b/packages/rimraf-cqrs-lib/package.json
@@ -17,7 +17,8 @@
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "mongodb": "^6.1.0",
-    "rimraf-rabbitmq": "workspace:*"
+    "rimraf-rabbitmq": "workspace:*",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@types/debug": "^4.1.10",
