--- a/packages/rimraf-cqrs-lib/package.json
+++ b/packages/rimraf-cqrs-lib/package.json
@@ -12,8 +12,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.9.4",
-    "@nestjs/common": "^10.2.7",
-    "@nestjs/core": "^10.2.7",
+    "express": "^4.18.2",
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "mongodb": "^6.1.0",
@@ -23,6 +22,7 @@
   "devDependencies": {
     "@types/debug": "^4.1.10",
     "@types/node": "20.8.5",
+    "@types/express": "^4.17.19",
     "tsconfig": "workspace:*",
     "typescript": "^5.2.2"
   }
