--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "main": "./dist/index",
-  "types": "./dist/index",
+  "types": "./src/index.ts",
   "type": "commonjs",
   "scripts": {
     "build": "tsc --build --force tsconfig.json"
