--- a/apps/read-model-v2/package.json
+++ b/apps/read-model-v2/package.json
@@ -16,11 +16,11 @@
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "mongodb": "^6.1.0",
+    "read-reducer": "workspace:*",
     "rimraf-cqrs-lib": "workspace:*",
     "rimraf-rabbitmq": "workspace:*",
     "socket.io": "^4.7.2",
-    "types": "workspace:*",
-    "read-reducer": "workspace:*"
+    "types": "workspace:*"
   },
   "devDependencies": {
     "@types/async-exit-hook": "^2.0.1",
