--- a/packages/rimraf-cqrs-lib/package.json
+++ b/packages/rimraf-cqrs-lib/package.json
@@ -8,7 +8,8 @@
   "types": "./src/index.ts",
   "type": "commonjs",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "build:dev": "tsc --watch"
   },
   "dependencies": {
     "@apollo/server": "^4.9.4",
